--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"Bernardo-A_pm-Aluguel" /o:"bernardo-a" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build
-          coverlet .\CovExample.Tests\bin\Debug\net6.0\CovExample.Tests.dll
+          coverlet .\Aluguel.Tests\bin\Debug\net7.0\Aluguel.Tests.dll
           --target "dotnet" 
           --targetargs "test --no-build"
           -f=opencover 
