--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,9 +45,5 @@ jobs:
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"Bernardo-A_pm-Aluguel" /o:"bernardo-a" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build --no-incremental
-          coverlet .\Aluguel.Tests\bin\Debug\net7.0\Aluguel.Tests.dll
-              --target "dotnet" 
-              --targetargs "test --no-build"
-              -f=opencover 
-              -o="coverage.xml"
+          coverlet .\Aluguel.Tests\bin\Debug\net7.0\Aluguel.Tests.dll --target "dotnet" --targetargs "test --no-build" -f=opencover -o="coverage.xml"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
